--- a/src/main/resources/Common/UI/Custom/Commons.ui
+++ b/src/main/resources/Common/UI/Custom/Commons.ui
@@ -1,6 +1,6 @@
 $Sounds = "Sound.ui";
 
-@ChosmozColor = #7BA9FFFF;
+@WelltaleColor = #7BA9FFFF;
 
 @CancelButtonStyle = TextButtonStyle(
   Default: (
@@ -72,8 +72,8 @@ $Sounds = "Sound.ui";
   Background: #ffffff(1.00);
 };
 
-@ChosmozSeparator = Group {
+@WelltaleSeparator = Group {
   LayoutMode: Left;
   Anchor: (Height: 2, Right: 0, Left: 0, Top: 10, Bottom: 10);
-  Background: @ChosmozColor;
+  Background: @WelltaleColor;
 };
