--- a/src/main/resources/Common/UI/Custom/Pages/Class/ClassSelectPage.ui
+++ b/src/main/resources/Common/UI/Custom/Pages/Class/ClassSelectPage.ui
@@ -23,10 +23,10 @@ Group #MainContainer {
 
         Label #ClassSelectorTitle {
           Text: "CLASSE";
-          Style: (FontSize: 15, TextColor: $C.@ChosmozColor, Alignment: Center, RenderBold: true);
+          Style: (FontSize: 15, TextColor: $C.@WelltaleColor, Alignment: Center, RenderBold: true);
         }
 
-        $C.@ChosmozSeparator {}
+        $C.@WelltaleSeparator {}
 
         Group #Classes {
           LayoutMode: Left;
